Fri Apr 26 02:09:38 GMT 2013  Marius Tibeica <mtibeica@gmail.com>

	* common/bitstream.cc,common/bitstream.h: Support reading entries from
	  an interpolative coded list one by one.

Thu Apr 25 10:57:02 GMT 2013  Olly Betts <olly@survex.com>

	* docs/remote_protocol.rst: Correct error in documentation of
	  REPLY_DOCDATA message.

Thu Apr 25 10:44:56 GMT 2013  Marius Tibeica <mtibeica@gmail.com>

	* common/bitstream.cc: renamed my_fls to highest_order_bit.

Thu Apr 25 06:49:48 GMT 2013  Olly Betts <olly@survex.com>

	* backends/remote/remote-database.cc,common/remoteprotocol.h,
	  docs/remote_protocol.rst,net/remoteserver.cc: Prefix compress
	  list of terms and metadata keys in the remote protocol.  
	  This requires a remote protocol major version bump.

Wed Apr 24 23:14:47 GMT 2013  Olly Betts <olly@survex.com>

	* queryparser/lemon.c,queryparser/queryparser.lt: Fix comment typos.

Wed Apr 24 06:27:26 GMT 2013  Olly Betts <olly@survex.com>

	* include/xapian.h: Add catch for Wt defining a macro called slots,
	  like we already do for Qt.

Wed Apr 24 03:40:13 GMT 2013  Olly Betts <olly@survex.com>

	* NEWS: Update.

Tue Apr 23 12:34:23 GMT 2013  Olly Betts <olly@survex.com>

	* backends/brass/brass_table.cc: Use a block's revision number to
	  check if it was newly allocated in the current revision, and
	  assert that the base file shows it block_free_at_start (previously
	  the check and assertion were the other way around).

Tue Apr 23 12:11:21 GMT 2013  Olly Betts <olly@survex.com>

	* HACKING: Note macports needed for development work.

Tue Apr 23 11:41:17 GMT 2013  Olly Betts <olly@survex.com>

	* include/xapian/version_h.cc: Fix typo in doc comment.

Tue Apr 23 11:39:30 GMT 2013  Olly Betts <olly@survex.com>

	* include/xapian/version_h.cc: Disable error for direct inclusion
	  of xapian/version.h for now.

Sun Apr 21 07:49:38 GMT 2013  Olly Betts <olly@survex.com>

	* include/xapian/version_h.cc: Fix quotes in new #error in version.h.
