@@ -1,7 +1,7 @@
 /** @file brass_positionlist.h
  * @brief A position list in a brass database.
  */
-/* Copyright (C) 2005,2006,2008,2009,2010,2011 Olly Betts
+/* Copyright (C) 2005,2006,2008,2009,2010,2011,2013 Olly Betts
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License as
@@ -29,7 +29,6 @@
 #include "backends/positionlist.h"
 
 #include <string>
-#include <vector>
 
 using namespace std;
 
@@ -74,13 +73,22 @@ class BrassPositionListTable : public BrassLazyTable {
 					 const string & term) const;
 };
 
+namespace Xapian { class BitReader; }
+using Xapian::BitReader;
+
 /** A position list in a brass database. */
 class BrassPositionList : public PositionList {
-    /// Vector of term positions.
-    vector<Xapian::termpos> positions;
+    /// Interpolative decoder.
+    BitReader * rd;
 
-    /// Position of iteration through data.
-    vector<Xapian::termpos>::const_iterator current_pos;
+    /// Current entry.
+    Xapian::termpos current_pos;
+
+    /// Last entry.
+    Xapian::termpos last;
+
+    /// Number of entries.
+    Xapian::termcount size;
 
     /// Have we started iterating yet?
     bool have_started;
@@ -96,13 +104,16 @@ class BrassPositionList : public PositionList {
 
   public:
     /// Default constructor.
-    BrassPositionList() : have_started(false) {}
+    BrassPositionList() : rd(NULL) {}
 
     /// Construct and initialise with data.
     BrassPositionList(const BrassTable * table, Xapian::docid did,
-		      const string & tname) {
+		      const string & tname)
+    : rd(NULL) {
 	(void)read_data(table, did, tname);
     }
+
+    ~BrassPositionList();
 
     /** Fill list with data, and move the position to the start.
      *
