@@ -1,7 +1,7 @@
 /** @file bitstream.cc
  * @brief Classes to encode/decode a bitstream.
  */
-/* Copyright (C) 2004,2005,2006,2008 Olly Betts
+/* Copyright (C) 2004,2005,2006,2008,2013 Olly Betts
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License as
@@ -186,7 +186,8 @@ BitReader::decode_interpolative(int j, int k,
 {
     Assert(!di_current.is_initialized());
     di_stack.reserve(highest_order_bit(pos_k - pos_j));
-    di_current.set(j, k, pos_j, pos_k);
+    di_current.set_j(j, pos_j);
+    di_current.set_k(k, pos_k);
 }
 
 Xapian::termpos
@@ -194,26 +195,24 @@ BitReader::decode_interpolative_next()
 {
     Assert(di_current.is_initialized());
     while (!di_stack.empty() || di_current.is_next()) {
-	if (di_current.is_next()) {
-	    di_stack.push_back(di_current);
-	    int mid = (di_current.j + di_current.k) / 2;
-	    int pos_mid = decode(di_current.pos_k - di_current.pos_j + di_current.j - di_current.k + 1, true) + (di_current.pos_j + mid - di_current.j);
-	    di_current.set(di_current.j, mid, di_current.pos_j, pos_mid);
-	} else {
+	if (!di_current.is_next()) {
 	    Xapian::termpos pos_ret = di_current.pos_k;
-	    di_current = di_stack[di_stack.size() - 1];
+	    di_current = di_stack.back();
 	    di_stack.pop_back();
 	    int mid = (di_current.j + di_current.k) / 2;
-	    int pos_mid = pos_ret;
-	    di_current.set(mid, di_current.k, pos_mid, di_current.pos_k);
-	    if (di_stack.empty() && !di_current.is_next())
-		di_current.set(0, 0, 0, 0);
+	    di_current.set_j(mid, pos_ret);
 	    return pos_ret;
 	}
+	di_stack.push_back(di_current);
+	int mid = (di_current.j + di_current.k) / 2;
+	int pos_mid = decode(di_current.outof(), true) +
+	    (di_current.pos_j + mid - di_current.j);
+	di_current.set_k(mid, pos_mid);
     }
-    // decode_interpolative_next() called too many times
-    Assert(false);
-    return 0;
+#ifdef XAPIAN_ASSERTIONS
+    di_current.uninit();
+#endif
+    return di_current.pos_k;
 }
 
 }
